uncache build