@@ -58,15 +58,12 @@ tasks.withType<Test> {
 }
 
 tasks.named<BootBuildImage>("bootBuildImage") {
-    buildCache {
-        volume { name = "build-cache" }
-    }
     environment.putAll(
         mapOf(
             "BP_JVM_VERSION" to "21",
             "BP_JVM_CDS_ENABLED" to "true",
             "BPE_DELIM_JAVA_TOOL_OPTIONS" to " ",
-            "BPE_APPEND_JAVA_TOOL_OPTIONS" to "--enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.vector",
+            "BPE_APPEND_JAVA_TOOL_OPTIONS" to "--enable-native-access=ALL-UNNAMED --add-module jdk.incubator.vector",
         )
     )
 }
